# Cybersecurity

./: README.md
CybersecurityLab/: pyproject.toml
CybersecurityLab/cyberlab/: __init__.py  __main__.py  brute_force.py  scanner.py  vuln_detector.py
CybersecurityLab/tests/: test_brute_force.py  test_scanner.py
CybersecurityLab/wordlists/: common.txt
