[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersecurity-lab"
version = "0.1.0"
description = "Ferramentas educacionais de ciberseguranca em Python."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
cyberlab = "cyberlab.__main__:main"

[tool.setuptools.packages.find]
include = ["cyberlab*"]
